alterei as rotas e documentação
